# odeiter

./: .coverage  .gitattributes  .gitignore  404.html  Makefile  README.md  __init__.py  adams_bashforth.py  adams_moulton.py  backward_differentiation.py  callback_modifier.py  coverage.xml  implicit_single_step.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  search.html  single_step.py  single_step_modifier.py  testing.py  time_domain.py  time_integrator.py  time_integrator_tqdm.py
.github/workflows/: python-app.yml
basic_examples/: index.html
docs/: basic_examples.md  index.md  install.md
docs/reference/: adams_bashforth.md  adams_moulton.md  backward_differentiation.md  callback_modifier.md  root_finder.md  single_step.md  time_domain.md  time_integrator.md
examples/: basic_example.py  simultaneous_solve_gif.py  sine.py  testing.py
install/: index.html
reference/adams_bashforth/: index.html
reference/adams_moulton/: index.html
reference/backward_differentiation/: index.html
reference/root_finder/: index.html
reports/coverage/: coverage.xml
reports/junit/: junit.xml
search/: search_index.json
site/install/: index.html
site/reference/: index.html
site/reference/backward_differentiation/: index.html
site/reference/callback_modifier/: index.html
site/search/: search_index.json
src/: time_integrator.py
src/examples/: sine.py
src/odeiter/: __init__.py  adams_bashforth.py  adams_moulton.py  backward_differentiation.py  callback_modifier.py  root_finder.py  single_step.py  time_domain.py  time_integrator.py
src/odeiter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_adams_bashforth.py  test_adams_moulton.py  test_backward_differentiation.py  test_callback_modifier.py  test_root_finder.py  test_single_step.py  test_time_domain.py  testing.py
(+5 files in other folders)
