[project]
name = "odeiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
