[project]
name = "odeiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sage", email = "sage.b.shaw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
	"--cov=src"
]
testpaths = [

    "tests",
]
