[project]
name = "odeiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sage", email = "sage.b.shaw@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "ipython>=8.12.3",
    "matplotlib>=3.7.5",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "sphinx>=7.4.7",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
	"--cov=src",
	"--cov-report=term-missing",
]
testpaths = [

    "tests",
]
